<resources>

    <string name="app_name">GUIMovilStore</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_gui">GUI</string>
    <string name="movilstore">Movil Store</string>
    <string name="subastas">Subastas</string>
    <string name="categorias">Categorias</string>
    <string name="noimage">Imagen no disponible</string>
    <string name="imgenproducto">Imagen Producto</string>
    <string name="nombreproducto">Nombre Producto</string>
    <string name="vendedor">Vendedor</string>
    <string name="nombrevendedor">Nombre Vendedor</string>
    <string name="precio">$00000</string>
    <string name="txtusrlog">Nickname o email</string>
    <string name="pass">Contraseña</string>
    <string name="recordar">Recrodarme?</string>
    <string name="ingresar">Ingresar</string>
    <string name="nomcategoria">Nombre Categoria</string>
    <string name="subrecientes">Añadidos Recientemente</string>
    <string name="ultimapuja">Ultima Puja</string>
    <string name="percio">"Precio: "</string>
    <string name="comprar">Comprar</string>
    <string name="descripcion">Descripcion</string>
    <string name="textodesc">Maecenas turpis nisl, mattis at ultricies nec, blandit id nunc. Nam luctus, mauris ac consequat vulputate, leo mauris condimentum velit, nec volutpat nibh quam at nunc.</string>
    <string name="reputacion">Reputacion</string>
    <string name="preguntas">Preguntas al vendedor</string>
    <string name="similares">Productos similares</string>
    <string name="tipoarticulo">Caracteristicas articulo</string>
    <string name="usadonousado">Usado/noUsado</string>
    <string name="nuevaventa">Crear Nueva Venta</string>
    <string name="cat">Categoria</string>
    <string name="datosproducto">Datos del Articulo</string>
    <string name="nombrearticulo">Nombre del Articulo</string>
    <string name="valor">Precio</string>
    <string name="subcategoria">Subcategoria</string>
    <string name="publicar">Publicar!</string>
    <string name="nickname">NickName</string>
    <string name="nombre">"Nombre: "</string>
    <string name="rut">"RUT: "</string>
    <string name="rutmuestra">11.111.111"-"1</string>
    <string name="email">"Email: "</string>
    <string name="articulospublicados">Mis Articulos Publicados</string>
    <string name="articulossubastados">Mis Articulos En Subasta</string>
    <string name="misdatos">Mis Datos</string>
    <string name="preguntarvendedor">Preguntar al vendedor</string>
    <string name="articulo">"Articulo: "</string>
    <string name="pregunta">"Pregunta: "</string>
    <string name="contpregunta">¿Contenido de la pregunta?</string>
    <string name="usuario">"Usuario: "</string>
    <string name="fecha">0000&#822;00&#822;00 00:00</string>
    <string name="respuesta">Respuesta:</string>
    <string name="preguntasvendedor">Preguntar al vendedor</string>
    <string name="compraexitosa">Felicitaciones! Has realizado una compra :)</string>
    <string name="articulocomprado">Articulo Comprado:</string>
    <string name="loquedebeshacer">Lo que debes hacer ahora&#8230;</string>
    <string name="instrucciones">Hemos enviado una notificacion al vendedor junto con tus datos y la oferta que haz realizado&#8230;de aqui en adelante es responsabilidad del vendedor contactarse contigo y es responsabilidad tuya coordinarte con el para realizar una buena comra.</string>
    <string name="nuestraresponsabilidad">Nuestra responsabilidad&#8230;</string>
    <string name="responsabilidad">Movil Store es una plataforma que une tanto compradores como vendedores, pero no participa en sus acuerdos, por tanto queda en manos del comprador y vendedor concretar el negocio.</string>
    <string name="gracias">Gracias por usar Movil Store :D</string>
    <string name="seguircomprando">Seguir comprando</string>
    <string name="noarticulos">No hay articulos en esta categoria :(</string>

</resources>