<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/usd_userfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/imgenproducto"
        android:scaleType="matrix"
        android:src="@drawable/titulo" />

    <EditText
        android:id="@+id/txtlogusr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:ems="10"
        android:hint="@string/txtusrlog"
        android:inputType="textNoSuggestions"
        android:textColor="@color/naranjado_1" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/naranjado_1" />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_small"
        android:onClick="ingresar"
        android:text="@string/ingresar"
        android:textColor="@color/naranjado_1"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/logcheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large"
        android:text="@string/recordar"
        android:textColor="@color/naranjado_1" />

</LinearLayout>