<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/naranjado_1"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:orientation="horizontal"
        android:padding="@dimen/xxsmall"
        android:paddingTop="@dimen/xxsmall" >

        <ImageView
            android:id="@+id/usd_userfoto"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/imgenproducto"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/usd_txtnickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/naranjado_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/preg_txtpregunta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/usd_txtnomvendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrevendedor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/preg_nomautor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rut" />

                <TextView
                    android:id="@+id/usd_txtrut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rutmuestra" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/usd_txtemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/xtrasmall"
                    android:text="@string/reputacion" />

                <RatingBar
                    android:id="@+id/usd_rbar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/xtrasmall"
        android:paddingRight="@dimen/xtrasmall" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_regtangle_vendor"
            android:padding="@dimen/xxsmall"
            android:text="@string/articulospublicados"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blanco" />

        <ListView
            android:id="@+id/usdlvprodvend"
            android:layout_width="match_parent"
            android:layout_height="134dp" >
        </ListView>

        <TextView
            android:id="@+id/preg_txtfecharesp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_regtangle_vendor"
            android:padding="@dimen/xxsmall"
            android:text="@string/articulossubastados"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blanco" />

        <ListView
            android:id="@+id/listView2"
            android:layout_width="match_parent"
            android:layout_height="114dp" >
        </ListView>
    </LinearLayout>

</LinearLayout>