<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/supersmall" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/xxsmall"
            android:paddingLeft="@dimen/xtrasmall"
            android:paddingTop="@dimen/xxsmall"
            android:text="@string/compraexitosa"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/naranjado_1" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chat_regtangle_vendor"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/xxsmall"
                    android:paddingLeft="@dimen/xtrasmall"
                    android:text="@string/articulocomprado"
                    android:textColor="@color/blanco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/xtrasmall"
                android:paddingLeft="@dimen/xtrasmall" >

                <ImageView
                    android:id="@+id/comp_imagen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/imgenproducto"
                    android:paddingRight="@dimen/xxsmall"
                    android:scaleType="matrix"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/comp_nombrearticulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombrearticulo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/xxsmall"
                            android:text="@string/vendedor" />

                        <TextView
                            android:id="@+id/comp_nomvend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombrevendedor" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/chat_regtangle_vendor"
                    android:padding="@dimen/xxsmall"
                    android:paddingLeft="@dimen/xtrasmall"
                    android:text="@string/loquedebeshacer"
                    android:textColor="@color/blanco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/xxsmall"
                    android:paddingLeft="@dimen/supersmall"
                    android:paddingTop="@dimen/xxsmall"
                    android:text="@string/instrucciones" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/chat_regtangle_vendor"
                    android:padding="@dimen/xxsmall"
                    android:paddingLeft="@dimen/xtrasmall"
                    android:text="@string/nuestraresponsabilidad"
                    android:textColor="@color/blanco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/xxsmall"
                    android:paddingLeft="@dimen/supersmall"
                    android:paddingTop="@dimen/xxsmall"
                    android:text="@string/responsabilidad" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/xtrasmall"
                android:text="@string/gracias"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/naranjado_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="backToMain"
                    android:text="@string/seguircomprando" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
