<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/xxsmall" >

    <ImageView
        android:id="@+id/preg_vend_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgenproducto"
        android:padding="@dimen/xxsmall"
        android:src="@drawable/notfound" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lvnomproducto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_small"
            android:text="@string/nombreproducto"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/naranjado_1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_small" >

            <TextView
                android:id="@+id/preg_txtpregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_small"
                android:text="@string/vendedor"
                android:textColor="@color/negro" />

            <TextView
                android:id="@+id/lvnomvendedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombrevendedor"
                android:textColor="@color/negro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_small" >

            <RatingBar
                android:id="@+id/usd_rbar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5" />

            <TextView
                android:id="@+id/lvprecio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="right"
                android:paddingRight="@dimen/supersmall"
                android:text="@string/precio"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>