<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imgenproducto"
                android:padding="@dimen/padding_small"
                android:src="@drawable/content_new_picture" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/naranjado_1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/usd_txtnickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/xxsmall"
            android:text="@string/datosproducto"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/supersmall"
            android:paddingRight="@dimen/supersmall"
            android:paddingTop="@dimen/xxsmall" >

            <TextView
                android:id="@+id/preg_txtfecharesp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/xxsmall"
                android:text="@string/nombrearticulo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/preg_txtpregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/xxsmall"
                android:text="@string/valor"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/usd_txtnomvendedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion" />

            <EditText
                android:id="@+id/txtnuepdesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textMultiLine|textNoSuggestions"
                android:lines="1"
                android:minLines="5"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:singleLine="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/naranjado_1"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/preg_nomautor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/xxsmall"
                android:text="@string/cat" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/xxsmall"
                android:text="@string/subcategoria" />

            <Spinner
                android:id="@+id/Spinner01"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/xxsmall"
                android:text="@string/tipoarticulo" />

            <Spinner
                android:id="@+id/Spinner02"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/naranjado_1"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publicar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>