<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisClaro"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grisClaro"
        android:orientation="vertical"
        android:paddingRight="@dimen/supersmall" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_regtangle_vendor"
            android:orientation="vertical"
            android:paddingBottom="@dimen/xxsmall"
            android:paddingLeft="@dimen/xtrasmall"
            android:paddingRight="@dimen/xtrasmall"
            android:paddingTop="@dimen/xxsmall" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta"
                    android:textColor="@color/blanco"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/preg_txtpregunta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contpregunta"
                    android:textColor="@color/blanco"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/comp_nombrearticulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario"
                    android:textColor="@color/blanco" />

                <TextView
                    android:id="@+id/preg_nomautor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrevendedor"
                    android:textColor="@color/blanco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/preg_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/fecha"
                    android:textColor="@color/blanco"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/grisClaro"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grisClaro"
        android:orientation="vertical"
        android:paddingLeft="@dimen/supersmall" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_answer"
            android:orientation="vertical"
            android:paddingBottom="@dimen/xxsmall"
            android:paddingLeft="@dimen/xtrasmall"
            android:paddingRight="@dimen/xtrasmall"
            android:paddingTop="@dimen/xxsmall" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="@dimen/supersmall"
                android:text="@string/respuesta"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/preg_txtresp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textodesc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/preg_txtfecharesp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/fecha"
                    android:textColor="@color/grisClaro"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/grisClaro"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>
